
Enum admin_gender_type {
    "남"
    "여"
}

Enum user_gender_type {
    "남"
    "여"
}

Table admins {
    admin_id int [pk, increment, note: "관리자 일련번호"]
    admin_email varchar(320) [not null, note: "관리자 로그인 ID"]
    admin_password varchar(255) [not null, note: "관리자 로그인 비밀번호 (암호화)"]
    admin_name varchar(50) [not null, note: "관리자 이름"]
    admin_gender admin_gender_type [not null, note: "관리자 성별"]
    admin_phone varchar(20) [not null, note: "관리자 연락처"]
    admin_birthdate date [not null, note: "관리자 생년월일"]
    reg_date datetime [not null, note: "가입한 날짜 시간 정보"]
    edit_date datetime [not null, note: "가입 정보를 수정한 날짜 시간 정보"]
}

Table carts {
    cart_id int [pk, increment, note: "장바구니 정보 일련번호"]
    user_id int [not null, note: "회원 정보"]
    product_id int [not null, note: "상품 정보"]
    reg_date datetime [not null, note: "장바구니에 추가한 날짜 시간 정보"]
}

Table categories {
    category_id int [pk, increment, note: "카테고리 일련번호"]
    category_name varchar(100) [not null, note: "상위 카테고리명"]
    reg_date datetime [not null, note: "하위  카테고리 정보를 등록한 날짜 시간 정보"]
    edit_date varchar(100) [not null, note: "하위  카테고리 정보를 수정한 날짜 시간 정보"]
}

Table colors {
    color_id int [pk, increment, note: "색상 일련번호"]
    color_name varchar(50) [not null, note: "색상명"]
    color_code varchar(10) [not null, note: "색상 코드"]
    reg_date datetime [not null, note: "색상 정보를 등록한 날짜 시간 정보"]
    edit_date datetime [not null, note: "색상 정보를 수정한 날짜 시간 정보"]
}

Table notices {
    notice_id int [pk, increment, note: "공지 일련번호"]
    admin_id int [not null, note: "작성한 관리자 정보"]
    notice_title varchar(200) [not null, note: "공지 제목"]
    notice_content text [not null, note: "공지 내용"]
    notice_img varchar(255) [note: "공지 이미지"]
    reg_date datetime [not null, note: "가입한 날짜 시간 정보"]
    edit_date datetime [not null, note: "가입 정보를 수정한 날짜 시간 정보"]
}

Table orders {
    order_id int [pk, increment, note: "주문 정보 일련번호"]
    user_id int [not null, note: "회원 정보"]
    order_status varchar(20) [not null, note: "주문 상태"]
    order_quantity int [not null, note: "주문 수량"]
    order_total_price int [not null, note: "주문 총금액"]
    reg_date datetime [not null, note: "주문 정보를 등록한 날짜 시간 정보"]
    edit_date datetime [not null, note: "주문 정보를 수정한 날짜 시간 정보"]
}

Table orders_products {
    order_product_id int [pk, increment, note: "주문 상품 정보 일련번호"]
    order_id int [not null, note: "주문 정보"]
    category_id int [not null, note: "카테고리 정보"]
    color_id int [not null, note: "주문 상품 색상 정보"]
    order_product_name varchar(200) [not null, note: "주문 상품명"]
    order_product_price int [not null, note: "주문 상품 금액"]
    order_product_img varchar(255) [not null, note: "주문 상품 이미지"]
    order_product_origin varchar(50) [not null, note: "상품 원산지"]
    reg_date datetime [not null, note: "주문 상품 정보를 등록한 날짜 시간 정보"]
    edit_date datetime [not null, note: "주문 상품 정보를 수정한 날짜 시간 정보"]
}

Table products {
    product_id int [pk, increment, note: "상품 일련번호"]
    category_id int [not null, note: "상품 카테고리 정보"]
    color_id int [not null, note: "상품 색상 정보"]
    product_name varchar(200) [not null, note: "상품명"]
    product_price int [not null, note: "상품 금액"]
    product_img varchar(255) [not null, note: "상품 이미지"]
    product_description_img varchar(255) [not null, note: "상품 설명 이미지"]
    product_origin varchar(50) [not null, note: "상품 원산지"]
    product_stock int [not null, note: "상품 재고"]
    reg_date datetime [not null, note: "상품 정보를 등록한 날짜 시간 정보"]
    edit_date datetime [not null, note: "상품 정보를 수정한 날짜 시간 정보"]
}

Table products_colors {
    product_color_id int [pk, increment, note: "상품-색상 관계 일련번호"]
    product_id int [not null, note: "상품 일련번호"]
    color_id int [not null, note: "상품 별 가능 색상 일련번호"]
    reg_date datetime [not null, note: "색상 정보를 등록한 날짜 시간 정보"]
    edit_date datetime [not null, note: "색상 정보를 수정한 날짜 시간 정보"]
}

Table sub_categories {
    sub_category_id int [pk, increment, note: "하위 카테고리 일련번호"]
    category_id int [not null, note: "상위 카테고리 일련번호"]
    sub_category_name varchar(100) [not null, note: "하위 카테고리명"]
    reg_date datetime [not null, note: "하위  카테고리 정보를 등록한 날짜 시간 정보"]
    edit_date datetime [not null, note: "하위  카테고리 정보를 수정한 날짜 시간 정보"]
}

Table users {
    user_id int [pk, increment, note: "회원 일련번호"]
    user_email varchar(320) [not null, note: "사용자 로그인 ID 및 이메일"]
    user_password varchar(255) [not null, note: "사용자 로그인 비밀번호 (암호화)"]
    user_name varchar(50) [not null, note: "사용자 이름"]
    user_gender user_gender_type [not null, note: "사용자 성별"]
    user_phone varchar(20) [not null, note: "사용자 연락처"]
    user_birthdate date [not null, note: "사용자 생년월일"]
    user_address varchar(255) [not null, note: "사용자 주소"]
    user_profile_img varchar(255) [not null, note: "사용자 프로필 이미지"]
    reg_date datetime [not null, note: "가입한 날짜 시간 정보"]
    edit_date datetime [not null, note: "가입 정보를 수정한 날짜 시간 정보"]
}

Table wishlists {
    wishlist_id int [pk, increment, note: "위시리스트 정보 일련번호"]
    user_id int [not null, note: "회원 정보"]
    product_id int [not null, note: "상품 정보"]
    reg_date datetime [not null, note: "위시리스트에 추가한 날짜 시간 정보"]
}

ref: admins.admin_id < notices.admin_id
ref: users.user_id < carts.user_id
ref: users.user_id < orders.user_id
ref: users.user_id < wishlists.user_id
ref: products.product_id < carts.product_id
ref: products.product_id < wishlists.product_id
ref: products.product_id < products_colors.product_id
ref: products.product_id < orders_products.order_id
ref: colors.color_id < products.color_id
ref: colors.color_id < products_colors.color_id
ref: colors.color_id < orders_products.color_id
ref: categories.category_id < products.category_id
ref: categories.category_id < orders_products.category_id
ref: categories.category_id < sub_categories.category_id
ref: orders.order_id < orders_products.order_id
